[gd_scene load_steps=6 format=2]

[ext_resource path="res://desktop.gd" type="Script" id=1]
[ext_resource path="res://Assets/sprites/desktop/background.jpg" type="Texture" id=2]
[ext_resource path="res://icon.png" type="Texture" id=3]
[ext_resource path="res://computer.gd" type="Script" id=4]
[ext_resource path="res://Assets/sprites/desktop/icon.png" type="Texture" id=5]

[node name="desktop" type="Node"]
pause_mode = 1
editor/display_folded = true
script = ExtResource( 1 )

[node name="background" type="Sprite" parent="."]
position = Vector2( 513.505, 298.693 )
scale = Vector2( 0.504066, 0.476222 )
texture = ExtResource( 2 )
__meta__ = {
"_edit_lock_": true
}

[node name="tool_bar" type="Sprite" parent="."]
modulate = Color( 0, 0, 0, 1 )
position = Vector2( 508.1, 583.732 )
scale = Vector2( 16.3594, 0.611503 )
texture = ExtResource( 3 )
__meta__ = {
"_edit_lock_": true
}

[node name="icons" type="Control" parent="."]
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_lock_": true
}

[node name="computer" type="Button" parent="icons"]
margin_left = 9.0
margin_top = 9.0
margin_right = 60.0
margin_bottom = 69.0
flat = true
script = ExtResource( 4 )
__meta__ = {
"_edit_group_": true,
"_edit_lock_": true
}

[node name="image" type="Sprite" parent="icons/computer"]
position = Vector2( 25.4879, 30.5111 )
scale = Vector2( 0.230158, 0.263548 )
texture = ExtResource( 5 )

[node name="double_click" type="Timer" parent="icons/computer"]
wait_time = 0.6
one_shot = true

[node name="change" type="Timer" parent="icons/computer"]
wait_time = 0.2
one_shot = true

[connection signal="pressed" from="icons/computer" to="icons/computer" method="_on_computer_pressed"]
[connection signal="timeout" from="icons/computer/double_click" to="icons/computer" method="_on_double_click_timeout"]
[connection signal="timeout" from="icons/computer/change" to="icons/computer" method="_on_change_timeout"]
